@@ -1,0 +1,7 @@
+<!-- make sure table following list parses correctly -->
+* list
+
+{|
+|-
+| Test
+|}
