@@ -61,6 +61,13 @@ Translation Updates:
 
 Bugfixes:
 
+  * Wiki tables placed after lists were being incorrectly indented.  Reported
+    by Rudi Wiesmayr.
+  * Fix incorrect parsing when inine tags (such as wiki bold) are left unclosed
+    before or after list tags.  Reported by Rudi Wiesmayr.
+  * Parsing of the <references /> tag produced an unclosed ordered list.
+    Reported by Rudi Wiesmayr and an anonymous user.
+
 
 0.8.3
 =====
